Update sample extension.xml