@@ -37,7 +37,6 @@ GC_TUNE="-XX:+UseParNewGC \
 JVM_OPTS="$GC_TUNE \
 -server \
 -d64 -Xms4g -Xmx4g \
--XX:PermSize=512M -XX:MaxPermSize=1G \
 -XX:+HeapDumpOnOutOfMemoryError \
 -XX:HeapDumpPath='logs/dump-$(date +%Y%m%d%H%M%S).hprof' \
 -Dfile.encoding=UTF-8 \
